// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductContainer should match snapshot with products 1`] = `
<section
  className="products-container"
>
  <Product
    id={1}
    key="0"
    name="MeatSticks"
    selectProduct={[Function]}
  />
  <button
    className="add-product"
    onClick={[Function]}
  >
    +
  </button>
</section>
`;

exports[`ProductContainer should match snapshot without products 1`] = `
<section
  className="products-container"
>
  <button
    className="add-product"
    onClick={[Function]}
  >
    +
  </button>
</section>
`;
